--- a/views/pages/cadastrar_posts.ejs
+++ b/views/pages/cadastrar_posts.ejs
@@ -25,8 +25,7 @@
                     </div>
                     <div class="form-group">
                         <div><label for="conteudo">Conteúdo da postagem</label></div>
-                        <div> <input type="text" id="conteudo" name="conteudo" required class="form-control"></div>
-                    </div>
+                        <textarea id="conteudo" name="conteudo" rows="4" cols="50"></textarea>                     </div>
                     <!-- TODO: Implementar um campo para verificar na página se as senhas coincidem -->
                     <div><button type="submit" class="form-control btn btn-dark">Inserir nova postagem</button></div>
                 </form>
