--- a/views/pages/pgposts.ejs
+++ b/views/pages/pgposts.ejs
@@ -23,17 +23,11 @@
                 </div>
             </div>
 
-            <div class="col-sm-4">
-                <div class="well">
-                    <h3>Sidebar de exemplo</h3>
-                    <%- include('../partials/flex-images-wrap'); %>
-                </div>
-            </div>
-        </div>
+        
     </main>
+    <%- include('../partials/posts'); %>
 
+</main>
     <footer>
-        <%- include('../partials/footer'); %>
     </footer>
-   
 </body>
