--- a/views/pages/pgposts.ejs
+++ b/views/pages/pgposts.ejs
@@ -31,3 +31,12 @@
     <footer>
     </footer>
 </body>
+<!-- <% posts.forEach(post => { %>
+    <div>
+        <h2><%= post.titulo %></h2>
+        <p><%= post.conteudo %></p>
+        <form action="/excluir_post/<%= post.id %>" method="post">
+            <button type="submit">Excluir</button>
+        </form>
+    </div>
+<% }); %> -->
