--- a/views/pages/teste.ejs
+++ b/views/pages/teste.ejs
@@ -9,6 +9,12 @@
 </head>
 <body>
     <div class="container">
+    
+    <div class="container">
+        <% if (req.session.username==="pedro") { %>
+            <%= JSON.stringify(req.session.username) %></div>
+        <% } %>
+        
         <!-- Menu superior com logotipo e imagens -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" href="#"><img src="logo.png" alt="Logotipo" height="30"></a>
