--- a/views/pages/pgposts.ejs
+++ b/views/pages/pgposts.ejs
@@ -18,8 +18,8 @@
         <div class="row">
             <div class="col-sm-8">
                 <div class="jumbotron">
-                    <h1>Site de exemplo com Nodejs + MySQL + Express + EJS e Bootstrap</h1>
-                    <p>Fique a vontade para modificá-lo</p>
+                    <h1>Seus posts estão aqui</h1>
+                    <p>Adicione ou delete posts</p>
                 </div>
             </div>
 
