--- a/views/partials/posts.ejs
+++ b/views/partials/posts.ejs
@@ -5,7 +5,7 @@
         <h1 class="t1"><%= post.titulo %></h1>
         <h1 class="t1"><%- post.conteudo %></h1>
         <h1 class="t1"><%= post.datapostagem %></h1>
-        <a href="/excluir_post/<%= post.id %>"> Deletar esse posts</a> 
+        <a href="/excluir_post/<%= post.id %>"> Apagar posts</a> 
         </div>
     <% }) %> 
     </div>
