--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -1,39 +1,33 @@
 <!DOCTYPE html>
 <html lang="ptbr">
-
-<head>
+  <head>
     <%- include('../partials/head'); %>
-</head>
+  </head>
 
-<body class="container">
-
+  <body class="container">
     <header>
-        <%- include('../partials/header'); %>
-        <% if(req.session.loggedin) { %>
-        <%- include('../partials/menu_dashboard'); %>
-        <% } %>        
+      <%- include('../partials/header'); %> <% if(req.session.loggedin) { %> <%-
+      include('../partials/menu_dashboard'); %> <% } %>
     </header>
 
     <main>
-        <div class="row">
-            <div class="col-sm-8">
-                <div class="jumbotron">
-                    <h1>Site de exemplo com Nodejs + MySQL + Express + EJS e Bootstrap</h1>
-                    <p>Fique a vontade para modificá-lo</p>
-                </div>
-            </div>
-
-            <div class="col-sm-4">
-                <div class="well">
-                    <h3>Sidebar de exemplo</h3>
-                    <%- include('../partials/flex-images-wrap'); %>
-                </div>
-            </div>
+      <div class="row">
+        <div class="col-sm-8">
+          <div class="jumbotron">
+            <h1>Blog - Nodejs - mySQL - express - EJS - bootstrap</h1>
+            <p>21/02</p>
+          </div>
         </div>
+
+        <div class="col-sm-4">
+          <div class="well">
+            <h3>Sidebar de exemplo</h3>
+            <%- include('../partials/flex-images-wrap'); %>
+          </div>
+        </div>
+      </div>
     </main>
 
-    <footer>
-        <%- include('../partials/footer'); %>
-    </footer>
-   
-</body>
+    <footer><%- include('../partials/footer'); %></footer>
+  </body>
+</html>
