--- a/views/pages/cadastrar_posts.ejs
+++ b/views/pages/cadastrar_posts.ejs
@@ -17,7 +17,7 @@
         <!-- <div class="jumbotron"></div> -->
         <div class="container-sm border border-danger rounded-lg">
             <div class="form-group">
-                <h3 style="text-align: center;">Inserir postagem</h3>
+                <h3 style="text-align: center;">Nova postagem</h3>
                 <form action="/cadastrar_posts" method="post">
                     <div class="form-group">
                         <div><label for="titulo">Título da postagem</label></div>
